# Spherdex

./: 404.html  README.md  faq.html  index.html  installation.html  license.html  lizenz.html  mkdocs.yml  pyproject.toml  requirements.txt  usage.html  über.html
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: faq.md  index.md  installation.md  usage.md  über.md
docs/js/: fix_github_links.js
faq/: index.html
installation/: index.html
members_management/: README.md  hooks.py  modules.txt
members_management/global_scripts/: serial.py
members_management/members_management/: hooks.py  modules.txt
mitgliederverwaltung/doctype/mitglied/: mitglied.js
mitgliederverwaltung/doctype/mitgliederverwaltung_einstellungen/: mitgliederverwaltung_einstellungen.js
search/: search_index.json
spherdex/: hooks.py  modules.txt  patches.txt
spherdex/api/: export_mitglieder.py  member_import.py  member_management.py
spherdex/config/: after_install.py  standard_roles.py
spherdex/doctype/admin_einstellungen/: admin_einstellungen.json
spherdex/doctype/sperr_protokoll/: sperr_protokoll.json
spherdex/global_scripts/: export_utils.py  member_management.py  serial.py  standard_roles.py  update_roles.py  utils.py
spherdex/patches/v1_0/: set_default_anzeigenmodus.py
spherdex/public/css/: handbook.css
spherdex/utils/: html_import.py  initialen.py  utils.py
spherdex/www/: depricated.html  handbuch.html
usage/: index.html
(+50 files in other folders)
